manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: 054037125756.dkr.ecr.ap-south-1.amazonaws.com/shubham_php_laravel_backend:latest
        ports:
        - containerPort: 8080   # yaha apne app ka port daalo
